--- a/testpj.html
+++ b/testpj.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>GitAAAA</title>
+  <title>Git4回目</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -11,7 +11,7 @@
 
 <body>
 
-  <p>GitAAA</p>
+  <p>Git4回目</p>
 
 </body>
 
